--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
     <form method="POST" action="/">
   		<input class="update-button" type="submit" name="submit" value="Update Files">
   	</form>
+    <br>
+    {{last_run}}
   </div>
 
 {% if data_dir_len != 0 %}
